# AdvCpp

./: .gitignore  1mb.txt  CMakeLists.txt  echo  readme.md
Process/: CMakeLists.txt
Process/include/: process.hpp
Process/source/: echo.cpp  main.cpp  process.cpp
YaContest6/: CMakeLists.txt
example/: main.cpp
include/: base_logger.h  connection.h  exceptions.h  file_logger.h  logger.h  process.hpp  server.h  stderr_logger.h  stdout_logger.h
lib/: CMakeLists.txt
lib/include/: base_logger.h  file_logger.h  logger.h  mmap_allocator.h  shmap.h  stderr_logger.h  stdout_logger.h
lib/source/: base_logger.cpp  file_logger.cpp  logger.cpp  stderr_logger.cpp  stdout_logger.cpp
source/: base_logger.cpp  connection.cpp  file_logger.cpp  logger.cpp  main.cpp  process.cpp  server.cpp  stderr_logger.cpp  stdout_logger.cpp
tcp/: CMakeLists.txt
tcp/include/: connection.h  server.h
tcp/source/: connection.cpp  main.cpp  server.cpp
